--- a/src/MultiImagePicker.XamarinPort/Properties/AndroidManifest.xml
+++ b/src/MultiImagePicker.XamarinPort/Properties/AndroidManifest.xml
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android" android:versionCode="1" android:versionName="1.0" package="MultiImagePicker.XamarinPort">
-	<uses-sdk android:minSdkVersion="7" />
+	<uses-sdk android:minSdkVersion="7" android:targetSdkVersion="19" />
 	<application android:label="MultiImagePicker.XamarinPort"></application>
+	<uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 </manifest>
